3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

server/c_object.c: modify examine so that it properly shows info about
    magic bullet spell books.  MSW 2001-04-05

common/item.c: Modify identify function to clear the NO_SKILL_IDENT
   flag so objects will now merge.  Also, once the object has been
   identified, the no_skill_ident doesn't have meaning anymore.
   MSW 2001-04-03

server/c_object:  Modify examine command to only be able to examine
   valid objects, and not whatever is on top of the space, which may be
   insivisible.  MSW 2001-04-01

include/sproto.h, server/c_wiz.c server/main.c server/player.c socket/loop.c:
Modify leave function to take a second parameter that determines if it
should print a message about the player leaving the game or not.  Proper
use of this prevents duplicate XXX left the game messages.  MSW 2001-03-29

common/image.c, include/define.h, include/global.h: Add empty_face structure
   and appropriate code to initialize it.  This is used for the server side
   look selection.
include/newserver.h: Add NUM_LOOK_OBJECTS to control number of look objects
   to send at any one time.  add look_position field to the newsocket
   structure.
server/move.c: clear look position as player moves.
server/player.c: initalize look_position element in structure.
socket/item.c: modify esrv_draw_look to sne NUM_LOOK_OBJECTS at any one
   time, and to also send pseudo objects that lets the player scroll up and down.
   modify ApplyCmd so that if it detects the application of one pseudo objects
   to adjust the look_position.
MSW 2001-03-29

common/readable.c: Name spellbooks based on level of spell, and not